--- a/.github/workflows/pr-num.yml
+++ b/.github/workflows/pr-num.yml
@@ -1,7 +1,4 @@
-name: Update CHANGELOG on PR Approval
-permissions:
-  contents: write
-  pull-requests: write
+name: CHANGELOG
 on:
   pull_request_review:
     types: [submitted]
@@ -11,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write  # Required for checkout and push
-      pull-requests: write
     steps:
       - name: Checkout PR branch
         uses: actions/checkout@v4
@@ -20,7 +16,7 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           fetch-depth: 0
 
-      - name: Update PR number in CHANGELOG
+      - name: Update PR NUMBER
         shell: bash
         run: |
           sed -i '/^##/,$ {s/#pr/#${{ github.event.pull_request.number }}/g}' ./CHANGELOG.md
@@ -37,10 +33,3 @@ jobs:
           git add CHANGELOG.md
           git commit --amend --no-edit
           git push -f
-      # Wait 3 seconds before adding label to trigger push event
-      - run: sleep 3s
-      - uses: hmarr/auto-approve-action@v4
-        if: github.event.review.state != 'approved'
-        with:
-          review-message: "An auto approved after bot, because ${{ github.actor }} already approved before."
-    
