--- a/.github/workflows/pr-num.yml
+++ b/.github/workflows/pr-num.yml
@@ -1,19 +1,21 @@
-name: Update CHANGELOG on PR Approval
+name: Update CHANGELOG PR NUMBER
 permissions:
   contents: write
   pull-requests: write
 on:
   pull_request_review:
-    types: [submitted]
+    # types: [submitted]
 jobs:
   update-changelog:
-    if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
     permissions:
       contents: write  # Required for checkout and push
-      pull-requests: write
     steps:
+      # - name: Fail if not approved
+      #   if: github.event.review.state != 'approved'
+      #   run: exit 1
       - name: Checkout PR branch
+      # if: github.event.review.state == 'approved'
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
@@ -37,10 +39,3 @@ jobs:
           git add CHANGELOG.md
           git commit --amend --no-edit
           git push -f
-      # Wait 3 seconds before adding label to trigger push event
-      - run: sleep 3s
-      - uses: hmarr/auto-approve-action@v4
-        if: github.event.review.state != 'approved'
-        with:
-          review-message: "An auto approved after bot, because ${{ github.actor }} already approved before."
-    
