update changelog need label trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 on:
   merge_group:
   pull_request:
+    types: [opened, synchronize, reopened, labeled]
   push:
     branches:
       - master
@@ -33,6 +34,7 @@ env:
 name: CI
 jobs:
   lint:
+    if: ${{ github.event_name != 'labeled' || github.event.label.name == 'B-pr-num' }}
     name: rust code lint
     runs-on: ubuntu-latest
     steps:
