--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ debug = true
 lto = true
 strip = true
 codegen-units = 1
+opt-level = "z"
+
 
 [workspace.package]
 authors = ["RibirX<Adoo@outlook.com>"]
