--- a/.github/workflows/enter-rc.yml
+++ b/.github/workflows/enter-rc.yml
@@ -2,11 +2,6 @@ name: Enter RC Phase
 
 on:
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Target stable version (e.g., 0.5.0). Leave empty to auto-detect from current alpha.'
-        required: false
-        type: string
 
 permissions:
   contents: write
@@ -21,42 +16,6 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-
-      - name: Determine version
-        id: version
-        run: |
-          INPUT_VERSION="${{ github.event.inputs.version }}"
-
-          if [ -n "$INPUT_VERSION" ]; then
-            # User provided version - validate format
-            if [[ ! "$INPUT_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo "Error: Version must be in format X.Y.Z (e.g., 0.5.0)"
-              exit 1
-            fi
-            VERSION="$INPUT_VERSION"
-            echo "Using provided version: $VERSION"
-          else
-            # Auto-detect from latest tag (e.g., v0.4.0-alpha.54 -> 0.4.0)
-            LAST_TAG=$(git describe --tags --abbrev=0)
-            echo "Latest tag: $LAST_TAG"
-
-            # Extract version: v0.4.0-alpha.54 -> 0.4.0
-            VERSION=$(echo "$LAST_TAG" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*/\1/')
-
-            if [[ ! "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo "Error: Could not extract version from tag $LAST_TAG"
-              exit 1
-            fi
-            echo "Auto-detected version: $VERSION"
-          fi
-
-          MAJOR=$(echo $VERSION | cut -d. -f1)
-          MINOR=$(echo $VERSION | cut -d. -f2)
-          BRANCH="release-${MAJOR}.${MINOR}.x"
-
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "branch=$BRANCH" >> $GITHUB_OUTPUT
-          echo "Preparing to enter RC phase for version $VERSION (branch: $BRANCH)"
 
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -101,27 +60,17 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          VERSION="${{ steps.version.outputs.version }}"
-          BRANCH="${{ steps.version.outputs.branch }}"
-
-          # Step 1: Run enter-rc command
-          # This creates release branch, archives changelog, merges alpha entries,
-          # generates AI highlights, commits, and creates the preparation PR
-          cargo run --manifest-path tools/ribir-bot/Cargo.toml -- release enter-rc --version $VERSION
-
-          # Step 2: Switch to release branch and publish RC.1
-          echo "Switching to release branch: $BRANCH"
-          git checkout $BRANCH
-          git pull origin $BRANCH
-
-          # Step 3: Publish RC.1 using cargo release (dry-run mode for testing)
-          echo "Publishing RC.1 (dry-run)..."
-          cargo run --manifest-path tools/ribir-bot/Cargo.toml -- release next rc
+          # Version is auto-detected from the latest git tag
+          cargo run --manifest-path tools/ribir-bot/Cargo.toml -- release enter-rc --execute
 
       - name: Summary
         run: |
-          VERSION="${{ steps.version.outputs.version }}"
-          BRANCH="${{ steps.version.outputs.branch }}"
+          # Extract version from latest tag for summary
+          LAST_TAG=$(git describe --tags --abbrev=0)
+          VERSION=$(echo "$LAST_TAG" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*/\1/')
+          MAJOR=$(echo $VERSION | cut -d. -f1)
+          MINOR=$(echo $VERSION | cut -d. -f2)
+          BRANCH="release-${MAJOR}.${MINOR}.x"
 
           echo "## RC Phase Initiated" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -131,6 +80,6 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Next Steps" >> $GITHUB_STEP_SUMMARY
           echo "1. Review the Stable Preparation PR" >> $GITHUB_STEP_SUMMARY
-          echo "2. Community tests the RC" >> $GITHUB_STEP_SUMMARY
-          echo "3. If bugs found, use \`release-rc.yml\` for rc.2, rc.3, etc." >> $GITHUB_STEP_SUMMARY
-          echo "4. Merge the PR to trigger stable release" >> $GITHUB_STEP_SUMMARY
+          echo "2. Community tests the RC.1 (published)" >> $GITHUB_STEP_SUMMARY
+          echo "3. If bugs found, fix and use \`/release-rc\` for rc.2, rc.3, etc." >> $GITHUB_STEP_SUMMARY
+          echo "4. Merge the Preparation PR to trigger stable release" >> $GITHUB_STEP_SUMMARY
