--- a/.github/workflows/rc-bot.yml
+++ b/.github/workflows/rc-bot.yml
@@ -3,22 +3,11 @@ name: RC Bot
 on:
   issue_comment:
     types: [created]
-  workflow_dispatch:
-    inputs:
-      pr_number:
-        description: "RC PR number to process"
-        required: true
-      command:
-        description: "Command to run (release-highlights or release-social-card)"
-        required: true
-        default: "release-highlights"
 
 jobs:
   rc-bot:
-    # Filter: Only respond to @ribir-bot release-* commands or workflow_dispatch
-    if: |
-      github.event_name == 'workflow_dispatch' ||
-      (github.event.issue.pull_request && contains(github.event.comment.body, '@ribir-bot') && contains(github.event.comment.body, 'release-'))
+    # Filter: Only respond to @ribir-bot release-* commands
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '@ribir-bot') && contains(github.event.comment.body, 'release-')
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
@@ -31,11 +20,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get event details for checkout
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            PR_NUMBER="${{ github.event.inputs.pr_number }}"
-          else
-            PR_NUMBER="${{ github.event.issue.number }}"
-          fi
+          PR_NUMBER="${{ github.event.issue.number }}"
 
           # Get branch info
           BRANCH=$(gh pr view $PR_NUMBER --json headRefName -q '.headRefName')
@@ -74,11 +59,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "command=${{ github.event.inputs.command }}" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
           # Parse command from comment
           cargo run --manifest-path tools/ribir-bot/Cargo.toml -- workflow handle-event \
             --dispatch-pr "${{ steps.event.outputs.pr_number }}" \
