fix(ribir-bot): 🐛 handle arbitrary tag prefix in version detection
The `get_latest_git_tag()` only stripped the `v` prefix, causing
`detect_version_from_tag()` to fail for tags with other prefixes
like `ribir-v0.4.0-alpha.53` or `ribir_painter-v0.0.1-alpha.1`.

- Use semver::Version::parse to validate version patterns
- Supports any prefix format (v, ribir-v, foo-bar-v, etc.)

--- a/.github/workflows/enter-rc.yml
+++ b/.github/workflows/enter-rc.yml
@@ -28,28 +28,7 @@ jobs:
         with:
           tool: cargo-workspaces
 
-      - name: Cache Gemini CLI
-        id: cache-gemini
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm-global
-          key: gemini-cli-0.22.4
-
-      - name: Setup Node.js
-        if: steps.cache-gemini.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install Gemini CLI
-        if: steps.cache-gemini.outputs.cache-hit != 'true'
-        run: |
-          mkdir -p ~/.npm-global
-          npm config set prefix ~/.npm-global
-          npm install -g @google/gemini-cli@0.22.4
-
-      - name: Add Gemini to PATH
-        run: echo "$HOME/.npm-global/bin" >> $GITHUB_PATH
+      - uses: ./.github/actions/setup-gemini
 
       - name: Enter RC Phase
         env:
