--- a/.github/actions/setup-gemini/action.yml
+++ b/.github/actions/setup-gemini/action.yml
@@ -9,7 +9,7 @@ runs:
       uses: actions/cache@v4
       with:
         path: ~/.npm-global
-        key: gemini-cli-0.22.4
+        key: gemini-cli-0.23
 
     - name: Setup Node.js
       if: steps.cache-gemini.outputs.cache-hit != 'true'
@@ -23,7 +23,7 @@ runs:
       run: |
         mkdir -p ~/.npm-global
         npm config set prefix ~/.npm-global
-        npm install -g @google/gemini-cli@0.22.4
+        npm install -g @google/gemini-cli@^0.23.0
 
     - name: Add Gemini to PATH
       shell: bash
