--- a/.github/workflows/enter-rc.yml
+++ b/.github/workflows/enter-rc.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-          token: ${{ secrets.RIBIR_RELEASE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -34,7 +34,7 @@ jobs:
       - name: Enter RC Phase
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATE_RELEASE_TOKEN }}
-          GH_TOKEN: ${{ secrets.RIBIR_RELEASE }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           CARGO_NET_GIT_FETCH_WITH_CLI: "true"
         run: |
